Bug 404719 - KDE save file dialog in Firefox: no aside preview, no overwrite confirmation
Summary: KDE save file dialog in Firefox: no aside preview, no overwrite confirmation
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI critical
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-22 22:17 UTC by User525
Modified: 2019-03-01 12:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.3
Sentry Crash Report:


Attachments
Dialogs behaviour (1010.87 KB, video/webm)
2019-02-22 22:17 UTC, User525
Details

Note You need to log in before you can comment on or make changes to this bug.
Description User525 2019-02-22 22:17:25 UTC
Created attachment 118305 [details]
Dialogs behaviour

SUMMARY
1. Aside preview option in save file dialog is grayed. However, in open file dialog aside preview is fully functional.
2. No confirmation if file is already exists. It just overwrites silently.

STEPS TO REPRODUCE
Please see attachment.

SOFTWARE/OS VERSIONS
Linux: KDE neon 5.15 User Edition / Arch
KDE Plasma Version: 5.15.1
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.0

ADDITIONAL INFORMATION
Tested with current live image: neon-useredition-20190221-0531-amd64.iso
Same with Arch Linux.
Can be related to bug 403199
Comment 1 Nate Graham 2019-02-23 05:29:28 UTC
Yikes! No overwrite confirmation is really dangerous.
Comment 2 Kai Uwe Broulik 2019-03-01 12:19:40 UTC
Git commit 194fb4dee8cbfef9ae72968367f20182f517efa0 by Kai Uwe Broulik.
Committed on 01/03/2019 at 12:19.
Pushed by broulik into branch 'Plasma/5.15'.

[File Chooser Portal] Confirm overwrite on saving
FIXED-IN: 5.15.3

Differential Revision: https://phabricator.kde.org/D19441

M  +1    -0    src/filechooser.cpp

https://commits.kde.org/xdg-desktop-portal-kde/194fb4dee8cbfef9ae72968367f20182f517efa0