[File Chooser Portal] Confirm overwrite on saving

BUG: 404719
FIXED-IN: 5.15.3

Differential Revision: https://phabricator.kde.org/D19441